# foundy_brownie_test

./: .dockerignore  .gitignore  Dockerfile  README.md  brownie-config.yaml  build-and-deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  test.py
brownie_app/: brownie-config.yaml
brownie_app/contracts/: DynamicIndex.sol  TrustedWrapperV2.sol
brownie_app/interfaces/: ITrustedWrapperV2.sol
brownie_app/scripts/: OpenAI.py  create_index_image.py  deploy_index.py  dindex_updater.py  helpful_scripts.py  index_calculator.py  ipfs_loader.py  update_index.py
contracts/: BatchWorkerV2.sol  DynamicIndex.sol
core/: models.py  settings.py
scripts/: OpenAI.py  create_index_image.py  deploy_index.py  dindex_updater.py  helpful_scripts.py  index_calculator.py  ipfs_loader.py  price_convertor.py  update_index.py
server_app/: app.py  main.py
server_app/dependencies/: __init__.py  verify_api_key.py
